# master-webapp

./: docker-compose-spy.yml  docker-compose.yml  readme.md
backend/volumes/: .gitignore  alembic.ini  build_redoc.py  db.py  migrate.py  pyproject.toml
backend/volumes/app/: __init__.py  main.py
backend/volumes/app/core/: __init__.py
backend/volumes/app/core/abstract/: __init__.py  converter.py  ddd.py
backend/volumes/app/core/base/: __init__.py  base_entity.py  base_error.py  base_factory.py  base_input_dto.py  base_output_dto.py  base_request.py  base_response.py  base_uow.py  base_usecase.py  base_value_object.py  ddd.py
backend/volumes/app/core/decorator/: transaction.py
backend/volumes/app/core/depends/: __init__.py  jwt_data_depends.py
backend/volumes/app/core/exception/: __init__.py  domain_exception.py  usecase_exception.py
backend/volumes/app/core/middleware/: __init__.py  asgi_middleware.py  auth_middleware.py  exception_handling_middleware.py  logging_middleware.py
backend/volumes/app/core/mixin/: __init__.py  sql_model_generate_mixin.py
backend/volumes/app/ddd/application/uow/: __init__.py  group_uow.py  user_uow.py
backend/volumes/app/ddd/domain/: __init__.py
backend/volumes/app/ddd/domain/enum/: __init__.py  action_code.py  error_code.py  resource_code.py  user_role_enum.py
backend/volumes/app/ddd/domain/error/: __init__.py  group_error.py  user_error.py
backend/volumes/app/ddd/domain/factory/: __init__.py  token_factory.py
backend/volumes/app/ddd/domain/model/: __init__.py  group.py  token.py  user.py
backend/volumes/app/ddd/domain/repository/: __init__.py  group_repository.py  user_repository.py
backend/volumes/app/ddd/domain/service/: auth_service.py
backend/volumes/app/ddd/domain/user/: __init__.py  i_user_repository.py
backend/volumes/app/ddd/infra/database/: db.py
backend/volumes/app/ddd/infra/repository/: user_repository.py
backend/volumes/app/ddd/infra/router/: router.py
backend/volumes/app/ddd/infrastructure/auth/: __init__.py  auth_service.py  hash_password.py  jwt_token.py
backend/volumes/app/ddd/infrastructure/database/: __init__.py  converter.py  db.py
backend/volumes/app/ddd/infrastructure/factory/: __init__.py  token_factory_impl.py
backend/volumes/app/ddd/infrastructure/log/: logger.py
backend/volumes/app/ddd/infrastructure/repository/: __init__.py  group_repository_impl.py  user_repository_impl.py
backend/volumes/app/ddd/infrastructure/service/: __init__.py  auth_service_impl.py
backend/volumes/app/ddd/infrastructure/uow/: __init__.py  group_uow_impl.py  user_uow_impl.py
backend/volumes/app/ddd/infrastructure/util/: convert.py
backend/volumes/app/ddd/presentation/: __init__.py
backend/volumes/app/ddd/presentation/endpoint/: __init__.py  (+4 more)
backend/volumes/migrations/: db.py  env.py  script.py.mako
backend/volumes/migrations/model/: user_model.py
backend/volumes/migrations/models/: __init__.py  group_model.py  user_model.py
backend/volumes/migrations/models/base/: __init__.py  base_table.py  master_table.py  transaction_table.py
backend/volumes/tests/domain/: test_group.py  test_user.py
backend/volumes/tests/fixture/: __init__.py  db.py
backend/volumes/tests/presentation/: test_group.py  test_health.py  test_pages.py  test_user.py
backend/volumes/tests/views/: test_conversation_view.py  test_health_view.py  test_user_view.py
(+461 files in other folders)
